Changes from continued personal review